--- a/index.html
+++ b/index.html
@@ -1,36 +1,16 @@
 <!DOCTYPE html>
-<html lang="en-us">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome to My Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>First Chart</title>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
-
 <body>
-  <h1>Michelle Risucci</h1>
-    <hr>
-  
-    <img width="200px" src="profilepicture.jpg" alt="Globe Trotting">
-
-    <p>
-      Traveling to experience different cultures is important for me.
-      Being of mixed backgrounds, I am fascinated with experiencing everything
-      I can while I can!  Learning about different foods is one of my favorite things
-      about traveling, since I love to cook and bake.
-    </p>
-    <p>
-      Baking has been a big part of my life.  Creating something from humble 
-      ingredients to share with people is heartwarming.  I have worked a long time
-      in the food industry, learning as much as I can, because it's always been a passion.
-    </p>
-    <hr>
-
-    <h2>Get to know me through social media...</h2>
-      <ul>
-        <li>Facebook</li>
-        <li><a target="_blank" href="https://www.instagram.com/michriz">Instagram</a> </li>
-      </ul>
-
+  <div id="bar-plot"></div>
+  <!-- D3.js CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.1/d3.min.js"></script>
+  <script src="plot.js"></script>
 </body>
-
 </html>
